Update descriptions for team members in About.html

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -38,7 +38,7 @@
         <div class="card-body">
           <p class="title">Person1</p>
           <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
+          <p class="card-text">Electric Engineer by Education Have been in Production of Lubricants for more than 30 </p>
           <p>person1@example.com</p>
         </div>
       </div>
@@ -48,7 +48,7 @@
         <div class="card-body">
           <p class="title">Person2</p>
           <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
+          <p class="card-text">B. Tech. Engineer by Education Have been in rural sales and marketing for more than 28 years worked till post of General Manager</p>
           <p>person2@example.com</p>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="card-body">
           <p class="title">Person3</p>
           <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
+          <p class="card-text">Automobile Engineer by Education Have been working at various level at plants of TATA and other Four-Wheeler Companies</p>
           <p>person3@example.com</p>
         </div>
       </div>
